{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 27,
  "lineage": "1d45831e-b713-a474-38ff-eb9df13f48ab",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "JobA-INSTANCE-AZ-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a6eaae9938c858c",
            "arn": "arn:aws:ec2:us-east-1:949160236929:instance/i-0babd046156f49e1a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0babd046156f49e1a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-028704411c6e62a49",
            "private_dns": "ip-10-0-2-168.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09fa43856287fa0fb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05ad7f0b0ec5fcc39",
            "tags": {
              "Name": "JobA-INSTANCE-AZ-A"
            },
            "tags_all": {
              "Name": "JobA-INSTANCE-AZ-A"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09d4dcc765e9a5f5f"
            ]
          },
          "dependencies": [
            "aws_instance.JobA-INSTANCE-PUBLIC",
            "aws_security_group.JobA-SG-LOAD-BALANCER",
            "aws_security_group.JobA-SG-PUBLIC",
            "aws_security_group.JobA-SG-WEB",
            "aws_subnet.JobA-SUBNET-AZ-A",
            "aws_subnet.JobA-SUBNET-PUBLIC",
            "aws_vpc.JobA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "JobA-INSTANCE-AZ-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a6eaae9938c858c",
            "arn": "arn:aws:ec2:us-east-1:949160236929:instance/i-024d7ee7c51b55c44",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-024d7ee7c51b55c44",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0079dd4d87f0285ad",
            "private_dns": "ip-10-0-3-230.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.230",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f5e7d3678e9aa5c7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01abf23ec2e2cbcf9",
            "tags": {
              "Name": "JobA-INSTANCE-AZ-B"
            },
            "tags_all": {
              "Name": "JobA-INSTANCE-AZ-B"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09d4dcc765e9a5f5f"
            ]
          },
          "dependencies": [
            "aws_instance.JobA-INSTANCE-PUBLIC",
            "aws_security_group.JobA-SG-LOAD-BALANCER",
            "aws_security_group.JobA-SG-PUBLIC",
            "aws_security_group.JobA-SG-WEB",
            "aws_subnet.JobA-SUBNET-AZ-B",
            "aws_subnet.JobA-SUBNET-PUBLIC",
            "aws_vpc.JobA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "JobA-INSTANCE-AZ-C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a6eaae9938c858c",
            "arn": "arn:aws:ec2:us-east-1:949160236929:instance/i-02eef7d46ccab5fea",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02eef7d46ccab5fea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08050dbace09fbeec",
            "private_dns": "ip-10-0-4-44.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08725b4b530f2d478",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e4e86cde537b9493",
            "tags": {
              "Name": "JobA-INSTANCE-AZ-C"
            },
            "tags_all": {
              "Name": "JobA-INSTANCE-AZ-C"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09d4dcc765e9a5f5f"
            ]
          },
          "dependencies": [
            "aws_instance.JobA-INSTANCE-PUBLIC",
            "aws_security_group.JobA-SG-LOAD-BALANCER",
            "aws_security_group.JobA-SG-PUBLIC",
            "aws_security_group.JobA-SG-WEB",
            "aws_subnet.JobA-SUBNET-AZ-C",
            "aws_subnet.JobA-SUBNET-PUBLIC",
            "aws_vpc.JobA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "JobA-INSTANCE-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a6eaae9938c858c",
            "arn": "arn:aws:ec2:us-east-1:949160236929:instance/i-0c6792129c43c8659",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c6792129c43c8659",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00edba0ed287d2bff",
            "private_dns": "ip-10-0-1-182.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.182",
            "public_ip": "44.204.35.45",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-026f8fa462f3ffe8b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-006495fcb619d6b57",
            "tags": {
              "Name": "JobA-INSTANCE-PUBLIC"
            },
            "tags_all": {
              "Name": "JobA-INSTANCE-PUBLIC"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-060d8d93f9777c19a"
            ]
          },
          "dependencies": [
            "aws_security_group.JobA-SG-LOAD-BALANCER",
            "aws_security_group.JobA-SG-PUBLIC",
            "aws_security_group.JobA-SG-WEB",
            "aws_subnet.JobA-SUBNET-PUBLIC",
            "aws_vpc.JobA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "JobA-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:internet-gateway/igw-0d9067d45488be5c1",
            "id": "igw-0d9067d45488be5c1",
            "owner_id": "949160236929",
            "tags": {
              "Name": "JobA-IGW"
            },
            "tags_all": {
              "Name": "JobA-IGW"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "JobA-LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:949160236929:loadbalancer/app/JobA-LB/7a0bdf6a5238c15e",
            "arn_suffix": "app/JobA-LB/7a0bdf6a5238c15e",
            "desync_mitigation_mode": "defensive",
            "dns_name": "JobA-LB-1653887990.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:949160236929:loadbalancer/app/JobA-LB/7a0bdf6a5238c15e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "JobA-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b68cc479a24426a9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01abf23ec2e2cbcf9"
              },
              {
                "subnet_id": "subnet-05ad7f0b0ec5fcc39"
              },
              {
                "subnet_id": "subnet-0e4e86cde537b9493"
              }
            ],
            "subnets": [
              "subnet-01abf23ec2e2cbcf9",
              "subnet-05ad7f0b0ec5fcc39",
              "subnet-0e4e86cde537b9493"
            ],
            "vpc_id": "vpc-0e064b7e569ce367d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.JobA-SG-LOAD-BALANCER",
            "aws_subnet.JobA-SUBNET-AZ-A",
            "aws_subnet.JobA-SUBNET-AZ-B",
            "aws_subnet.JobA-SUBNET-AZ-C",
            "aws_vpc.JobA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "JobA-LB-LISTENER",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:949160236929:listener/app/JobA-LB/7a0bdf6a5238c15e/3866cc893fbed6f6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:949160236929:targetgroup/JobA-LB-TG2/359fe5098d5e3540",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:949160236929:listener/app/JobA-LB/7a0bdf6a5238c15e/3866cc893fbed6f6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:949160236929:loadbalancer/app/JobA-LB/7a0bdf6a5238c15e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.JobA-LB",
            "aws_lb_target_group.JobA-LB-TG2",
            "aws_security_group.JobA-SG-LOAD-BALANCER",
            "aws_subnet.JobA-SUBNET-AZ-A",
            "aws_subnet.JobA-SUBNET-AZ-B",
            "aws_subnet.JobA-SUBNET-AZ-C",
            "aws_vpc.JobA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "JobA-LB-TG2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:949160236929:targetgroup/JobA-LB-TG2/359fe5098d5e3540",
            "arn_suffix": "targetgroup/JobA-LB-TG2/359fe5098d5e3540",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:949160236929:targetgroup/JobA-LB-TG2/359fe5098d5e3540",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "JobA-LB-TG2",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e064b7e569ce367d"
          },
          "dependencies": [
            "aws_vpc.JobA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "JobA-LB-TG2-ATTACH-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:949160236929:targetgroup/JobA-LB-TG2/359fe5098d5e3540-20230922095549644600000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:949160236929:targetgroup/JobA-LB-TG2/359fe5098d5e3540",
            "target_id": "i-0babd046156f49e1a"
          },
          "dependencies": [
            "aws_instance.JobA-INSTANCE-AZ-A",
            "aws_instance.JobA-INSTANCE-PUBLIC",
            "aws_lb_target_group.JobA-LB-TG2",
            "aws_security_group.JobA-SG-LOAD-BALANCER",
            "aws_security_group.JobA-SG-PUBLIC",
            "aws_security_group.JobA-SG-WEB",
            "aws_subnet.JobA-SUBNET-AZ-A",
            "aws_subnet.JobA-SUBNET-PUBLIC",
            "aws_vpc.JobA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "JobA-LB-TG2-ATTACH-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:949160236929:targetgroup/JobA-LB-TG2/359fe5098d5e3540-2023092209560021610000000a",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:949160236929:targetgroup/JobA-LB-TG2/359fe5098d5e3540",
            "target_id": "i-024d7ee7c51b55c44"
          },
          "dependencies": [
            "aws_instance.JobA-INSTANCE-AZ-B",
            "aws_instance.JobA-INSTANCE-PUBLIC",
            "aws_lb_target_group.JobA-LB-TG2",
            "aws_security_group.JobA-SG-LOAD-BALANCER",
            "aws_security_group.JobA-SG-PUBLIC",
            "aws_security_group.JobA-SG-WEB",
            "aws_subnet.JobA-SUBNET-AZ-B",
            "aws_subnet.JobA-SUBNET-PUBLIC",
            "aws_vpc.JobA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "JobA-LB-TG2-ATTACH-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:949160236929:targetgroup/JobA-LB-TG2/359fe5098d5e3540-20230922095559875800000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:949160236929:targetgroup/JobA-LB-TG2/359fe5098d5e3540",
            "target_id": "i-02eef7d46ccab5fea"
          },
          "dependencies": [
            "aws_instance.JobA-INSTANCE-AZ-C",
            "aws_instance.JobA-INSTANCE-PUBLIC",
            "aws_lb_target_group.JobA-LB-TG2",
            "aws_security_group.JobA-SG-LOAD-BALANCER",
            "aws_security_group.JobA-SG-PUBLIC",
            "aws_security_group.JobA-SG-WEB",
            "aws_subnet.JobA-SUBNET-AZ-C",
            "aws_subnet.JobA-SUBNET-PUBLIC",
            "aws_vpc.JobA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "JobA-RTB-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:route-table/rtb-01149204b06ddbd64",
            "id": "rtb-01149204b06ddbd64",
            "owner_id": "949160236929",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d9067d45488be5c1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "JobA-RTB-PUBLIC"
            },
            "tags_all": {
              "Name": "JobA-RTB-PUBLIC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e064b7e569ce367d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.JobA-IGW",
            "aws_vpc.JobA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "JobA-RTB-PUBLIC-ASSOC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f293dc3cee5b5e9",
            "route_table_id": "rtb-01149204b06ddbd64",
            "subnet_id": "subnet-006495fcb619d6b57"
          },
          "dependencies": [
            "aws_internet_gateway.JobA-IGW",
            "aws_route_table.JobA-RTB-PUBLIC",
            "aws_subnet.JobA-SUBNET-PUBLIC",
            "aws_vpc.JobA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "JobA-RTB-PUBLIC-ASSOC1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d261b084a3d93436",
            "route_table_id": "rtb-01149204b06ddbd64",
            "subnet_id": "subnet-05ad7f0b0ec5fcc39"
          },
          "dependencies": [
            "aws_internet_gateway.JobA-IGW",
            "aws_route_table.JobA-RTB-PUBLIC",
            "aws_subnet.JobA-SUBNET-AZ-A",
            "aws_vpc.JobA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "JobA-RTB-PUBLIC-ASSOC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016f86aade12b6147",
            "route_table_id": "rtb-01149204b06ddbd64",
            "subnet_id": "subnet-01abf23ec2e2cbcf9"
          },
          "dependencies": [
            "aws_internet_gateway.JobA-IGW",
            "aws_route_table.JobA-RTB-PUBLIC",
            "aws_subnet.JobA-SUBNET-AZ-B",
            "aws_vpc.JobA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "JobA-RTB-PUBLIC-ASSOC3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a9ac67e53628472",
            "route_table_id": "rtb-01149204b06ddbd64",
            "subnet_id": "subnet-0e4e86cde537b9493"
          },
          "dependencies": [
            "aws_internet_gateway.JobA-IGW",
            "aws_route_table.JobA-RTB-PUBLIC",
            "aws_subnet.JobA-SUBNET-AZ-C",
            "aws_vpc.JobA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "JobA-SG-LOAD-BALANCER",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:security-group/sg-0b68cc479a24426a9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b68cc479a24426a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230922095445661900000001",
            "name_prefix": "terraform-",
            "owner_id": "949160236929",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "JobA-SG-LOAD-BALANCER"
            },
            "tags_all": {
              "Name": "JobA-SG-LOAD-BALANCER"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e064b7e569ce367d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.JobA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "JobA-SG-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:security-group/sg-060d8d93f9777c19a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-060d8d93f9777c19a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3128,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09d4dcc765e9a5f5f"
                ],
                "self": false,
                "to_port": 3128
              }
            ],
            "name": "terraform-20230922095451206400000003",
            "name_prefix": "terraform-",
            "owner_id": "949160236929",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "JobA-SG-PUBLIC"
            },
            "tags_all": {
              "Name": "JobA-SG-PUBLIC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e064b7e569ce367d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.JobA-SG-LOAD-BALANCER",
            "aws_security_group.JobA-SG-WEB",
            "aws_vpc.JobA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "JobA-SG-WEB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:security-group/sg-09d4dcc765e9a5f5f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09d4dcc765e9a5f5f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b68cc479a24426a9"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230922095449098500000002",
            "name_prefix": "terraform-",
            "owner_id": "949160236929",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "JobA-SG-PUBLIC"
            },
            "tags_all": {
              "Name": "JobA-SG-PUBLIC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e064b7e569ce367d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.JobA-SG-LOAD-BALANCER",
            "aws_vpc.JobA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "JobA-SUBNET-AZ-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:subnet/subnet-05ad7f0b0ec5fcc39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ad7f0b0ec5fcc39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949160236929",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "JobA-SUBNET-AZ-A"
            },
            "tags_all": {
              "Name": "JobA-SUBNET-AZ-A"
            },
            "vpc_id": "vpc-0e064b7e569ce367d"
          },
          "dependencies": [
            "aws_vpc.JobA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "JobA-SUBNET-AZ-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:subnet/subnet-01abf23ec2e2cbcf9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01abf23ec2e2cbcf9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949160236929",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "JobA-SUBNET-AZ-B"
            },
            "tags_all": {
              "Name": "JobA-SUBNET-AZ-B"
            },
            "vpc_id": "vpc-0e064b7e569ce367d"
          },
          "dependencies": [
            "aws_vpc.JobA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "JobA-SUBNET-AZ-C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:subnet/subnet-0e4e86cde537b9493",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4e86cde537b9493",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949160236929",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "JobA-SUBNET-AZ-C"
            },
            "tags_all": {
              "Name": "JobA-SUBNET-AZ-C"
            },
            "vpc_id": "vpc-0e064b7e569ce367d"
          },
          "dependencies": [
            "aws_vpc.JobA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "JobA-SUBNET-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:subnet/subnet-006495fcb619d6b57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006495fcb619d6b57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949160236929",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "JobA-SUBNET-PUBLIC"
            },
            "tags_all": {
              "Name": "JobA-SUBNET-PUBLIC"
            },
            "vpc_id": "vpc-0e064b7e569ce367d"
          },
          "dependencies": [
            "aws_vpc.JobA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "JobA-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:vpc/vpc-0e064b7e569ce367d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e2e4316987f367c1",
            "default_route_table_id": "rtb-05dc59bca037c1d01",
            "default_security_group_id": "sg-036b41060778cfafd",
            "dhcp_options_id": "dopt-0f37752447b5d60ae",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e064b7e569ce367d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05dc59bca037c1d01",
            "owner_id": "949160236929",
            "tags": {
              "Name": "JobA-VPC"
            },
            "tags_all": {
              "Name": "JobA-VPC"
            }
          }
        }
      ]
    }
  ]
}